RESOLVED FIXED54812
Crash when trying to take a snapshot of an uninitialized plug-in
https://bugs.webkit.org/show_bug.cgi?id=54812
Summary Crash when trying to take a snapshot of an uninitialized plug-in
Anders Carlsson
Reported 2011-02-19 13:53:02 PST
Crash when trying to take a snapshot of an uninitialized plug-in
Attachments
Patch (1.21 KB, patch)
2011-02-19 13:53 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-02-19 13:53:30 PST
Anders Carlsson
Comment 2 2011-02-19 13:57:35 PST
mitz
Comment 3 2011-02-19 21:12:32 PST
Note You need to log in before you can comment on or make changes to this bug.