2011-02-19  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Crash when trying to take a snapshot of an uninitialized plug-in
        https://bugs.webkit.org/show_bug.cgi?id=54812

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::notifyWidget):
        Don't try to create a snapshot of the plug-in if it hasn't been initialized.


Canonical link: https://commits.webkit.org/69071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79133 268f45cc-cd09-0410-ab3c-d52691b4dbfc